--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MCC QRCode Site to handle user registration via QRCode",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "László Gábor",
   "license": "ISC",
